...
            <ImageView
                android:id="@+id/gasolineraIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/favButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="3dp"
                android:background="#00FFFFFF"
                android:src="@drawable/favorito_desactivado" />
...
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Comentario:"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/comentarioText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:elegantTextHeight="false"
            android:fadeScrollbars="false"
            android:maxHeight="120dp"
...
