...
        android:id="@+id/anhadeComentarioEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anhade_comentario" />

    <EditText
        android:id="@+id/textBox_anhadeComentario"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:autofillHints="Escribe un comentario" />
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNumCaracteresActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="#000000" />
...
