<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_fav"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listFavGasolineras"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </ListView>
</RelativeLayout>