<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/modificaComentarioEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/modifica_comentario" />

    <EditText
        android:id="@+id/textBox_modificaComentario"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:autofillHints="Escribe un comentario"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textNumCaracteresActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textNumCaracteresTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/240"
            android:textAlignment="textEnd"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>