<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/textMarcaFavDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:hint="Marca..."
        android:imeOptions="actionSend"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textSize="16dp" />

    <ListView
        android:id="@+id/listViewMarcasFavDialog"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <EditText
        android:id="@+id/textLocalidadFavDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:hint="Localidad..."
        android:imeOptions="actionSend"
        android:inputType="textCapSentences|textAutoCorrect"
        android:textSize="16dp" />

    <ListView
        android:id="@+id/listViewLocalidadesFavDialog"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

</LinearLayout>